tests/ifcc-test-output/testfiles-3_04_00_multi_declaration_same_variable/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: redefinition of ‘a’
    3 |     int a = 4;
      |         ^
input.c:2:9: note: previous definition of ‘a’ was here
    2 |     int a = 5;
      |         ^

return code: 1
